--- a/special-pages/shared/components/Button/Button.module.css
+++ b/special-pages/shared/components/Button/Button.module.css
@@ -31,13 +31,7 @@
         box-shadow: var(--button-shadow--disabled, var(--button-shadow));
         color: var(--button-text--disabled, var(--button-text));
         opacity: var(--button-opacity--disabled, var(--button-opacity));
-
-        &:hover {
-            background: var(--button-bg--disabled, var(--button-bg));
-            box-shadow: var(--button-shadow--disabled, var(--button-shadow));
-            color: var(--button-text--disabled, var(--button-text));
-            opacity: var(--button-opacity--disabled, var(--button-opacity));
-        }
+        cursor: default;
     }
 
     &:focus,
@@ -49,14 +43,14 @@
         outline: none;
     }
 
-    &:hover {
+    &:hover:not(:disabled) {
         background: var(--button-bg);
         box-shadow: var(--button-shadow--hover, var(--button-shadow));
         color: var(--button-text--hover, var(--button-text));
         opacity: var(--button-opacity--hover, var(--button-opacity));
     }
 
-    &:active {
+    &:active:not(:disabled) {
         background: var(--button-bg--active, var(--button-bg));
         box-shadow: var(--button-shadow--active, var(--button-shadow));
         color: var(--button-text--active, var(--button-text));
@@ -75,7 +69,7 @@
     padding: 0 var(--sp-6);
     text-align: center;
 
-    &:active {
+    &:active:not(:disabled) {
         background: var(--button-bg--active, var(--button-bg));
         color: var(--button-text--active, var(--button-text));
     }
@@ -101,11 +95,11 @@ body:not([data-platform-name]) {
         line-height: var(--sp-8);
         padding: 0 var(--sp-4);
 
-        &:hover {
+        &:hover:not(:disabled) {
             background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.16) 100%), #2749db;
         }
 
-        &:active {
+        &:active:not(:disabled) {
             background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.16) 100%), #1743d1;
         }
     }
