Add support for `bottomRight` Popover position and className customization

--- a/special-pages/pages/new-tab/app/components/Popover.module.css
+++ b/special-pages/pages/new-tab/app/components/Popover.module.css
@@ -5,13 +5,22 @@
             drop-shadow(0 0 calc(1px) rgba(0, 0, 0, 0.25))
             drop-shadow(0 calc(8px) calc(16px) rgba(0, 0, 0, 0.20));
     flex-direction: row;
-    left: calc(100% + 7px);
+    left: calc(100% + var(--popover-offset-x, 0px));
     outline: none;
     position: absolute;
-    top: 50%;
+    top: calc(50% + var(--popover-offset-y, 0px));
     transform: translateY(-50%);
     width: 390px;
     z-index: 1000;
+
+    &[data-position="bottomRight"] {
+        bottom: calc(100% - var(--popover-offset-y, 0px));
+        flex-direction: column;
+        left: auto;
+        right: calc(0px - var(--popover-offset-x, 0px));
+        top: auto;
+        transform: none;
+    }
 }
 
 .content {
@@ -79,16 +88,13 @@
 .arrow {
     color: var(--ds-color-theme-surface-tertiary);
     margin-right: -1px;
-}
 
-.popover[data-position="right"] {
-    flex-direction: row-reverse;
-    left: auto;
-    right: calc(100% + 7px);
-}
-
-.popover[data-position="right"] .arrow {
-    margin-left: -1px;
-    margin-right: 0;
-    transform: scaleX(-1);
+    .popover[data-position="bottomRight"] & {
+        align-self: flex-end;
+        margin-bottom: -9px;
+        margin-right: var(--sp-10);
+        margin-top: -9px;
+        order: 1;
+        transform: rotate(-90deg);
+    }
 }
