--- a/special-pages/pages/new-tab/app/customizer/components/CustomizerDrawerInner.module.css
+++ b/special-pages/pages/new-tab/app/customizer/components/CustomizerDrawerInner.module.css
@@ -79,6 +79,9 @@
     margin-top: 16px;
 }
 .sectionTitle {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     font-size: var(--title-3-em-font-size);
     font-weight: var(--title-3-em-font-weight);
     line-height: var(--title-3-em-line-height);
