--- a/special-pages/pages/new-tab/app/components/Popover.module.css
+++ b/special-pages/pages/new-tab/app/components/Popover.module.css
@@ -3,14 +3,14 @@
     display: flex;
     filter: drop-shadow(0 0 calc(0.5px) rgba(0, 0, 0, 0.75))
             drop-shadow(0 0 calc(1px) rgba(0, 0, 0, 0.25))
-            drop-shadow(0 calc(8px) calc(16px) rgba(0, 0, 0, 0.20));
+            drop-shadow(0 calc(8px) calc(24px) rgba(0, 0, 0, 0.20));
     flex-direction: row;
     left: calc(100% + var(--popover-offset-x, 0px));
     outline: none;
     position: absolute;
     top: calc(50% + var(--popover-offset-y, 0px));
     transform: translateY(-50%);
-    width: 390px;
+    width: 380px;
     z-index: 1000;
 
     &[data-position="bottomRight"] {
@@ -26,11 +26,11 @@
 .content {
     align-items: center;
     background: var(--ds-color-theme-surface-tertiary);
-    border-radius: 16px;
+    border-radius: 10px;
     display: flex;
     flex: auto;
     gap: var(--sp-4);
-    padding: var(--sp-4) var(--sp-11) var(--sp-4) var(--sp-5);
+    padding: var(--sp-2) var(--sp-8) var(--sp-2) var(--sp-2);
     position: relative;
 }
 
@@ -42,6 +42,18 @@
 
 .imageContainer {
     flex: none;
+}
+
+.textContainer {
+    display: flex;
+    flex-direction: column;
+    gap: var(--sp-1);
+    padding: var(--sp-2) 0 var(--sp-2) var(--sp-2);
+}
+
+/* When image is present, remove extra left padding */
+.imageContainer + .textContainer {
+    padding-left: 0;
 }
 
 .heading {
