Use AddressBarPreview component to render the address bar mode changes

--- a/special-pages/pages/onboarding/app/pages/AddressBarMode.module.css
+++ b/special-pages/pages/onboarding/app/pages/AddressBarMode.module.css
@@ -24,6 +24,12 @@
   margin-bottom: var(--sp-7);
 }
 
+.starIcon {
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
+}
+
 .footerText {
   color: var(--theme-txt-color-progress);
 }
