--- a/special-pages/pages/onboarding/app/components/ToggleButton.module.css
+++ b/special-pages/pages/onboarding/app/components/ToggleButton.module.css
@@ -68,7 +68,8 @@
 
 .radioCircleUnselected {
   --radio-unselected: rgba(0, 0, 0, 0.36);
-  fill: var(--radio-unselected);
+  stroke: var(--radio-unselected);
+  fill: none;
   @media (prefers-color-scheme: dark) {
     --radio-unselected: rgba(255, 255, 255, 0.24);
   }
